skyapp-frontend/src/WeatherMap.css
.weather-map-wrapper {
  height: 250px;
  width: 100%;
  border-radius: 2rem;
  overflow: hidden;
  position: relative;
  margin:0.5rem auto;
  
  /* 1. Dark background for Night Mode */
  background-color: #0a0a0b;

  /* 2. CSS Grid Pattern (No Image File Needed) */
  background-image: 
    linear-gradient(rgba(0, 242, 255, 0.05) 1px, transparent 1px),
    linear-gradient(90deg, rgba(0, 242, 255, 0.05) 1px, transparent 1px);
  background-size: 30px 30px;
  background-position: center;

  /* 3. Force the LCP paint */
  content-visibility: auto;
  contain-intrinsic-size: 300px;
}

/* 4. Match the Day Mode colors */
.mode-day .weather-map-wrapper {
  background-color: #f0f2f5;
  background-image: 
    linear-gradient(rgba(0, 0, 0, 0.05) 1px, transparent 1px),
    linear-gradient(90deg, rgba(0, 0, 0, 0.05) 1px, transparent 1px);
}
/* Base Map Layer (The Land) */
.mode-night .leaflet-tile-pane .leaflet-layer:nth-child(1) {
  /*  turns a bright map into a deep navy/charcoal 'Night' map */
  filter: brightness(0.6) contrast(1.2) saturate(0.5) hue-rotate(180deg) invert(10%);
}

/* Cloud Layer (The Weather) */
.mode-night .clouds-layer {
  /* 'screen' makes dark pixels transparent and light pixels glow */
  mix-blend-mode: screen !important;
  /* Boost brightness so the grey clouds become white 'wisps' */
  filter: brightness(2.5) contrast(1.5) saturate(0) !important;
  opacity: 0.1 !important; /* Higher opacity works now because blend-mode handles the 'darkness' */
}

/* Day Mode: Clean and Simple */
.mode-day .clouds-layer {
  mix-blend-mode: multiply !important; /* Clouds darken the land slightly */
  filter: brightness(1) contrast(1);
  opacity: 0.1 !important;
}
/* --- NIGHT MODE: Lighter, ethereal clouds --- */

.map-overlay-scan {
  position: absolute;
  top: 0; left: 0;
  width: 100%; height: 100%;
  background: linear-gradient(
    rgba(18, 16, 16, 0) 50%, 
    rgba(0, 0, 0, 0.1) 50%
  ), linear-gradient(
    90deg, 
    rgba(255, 0, 0, 0.03), 
    rgba(0, 255, 0, 0.01), 
    rgba(0, 0, 255, 0.03)
  );
  background-size: 100% 4px, 3px 100%;
  pointer-events: none;
  z-index: 1000;
  opacity: 0.34;
}

